fix: 입력 금액 예외 처리